--- a/src/app/style.css
+++ b/src/app/style.css
@@ -245,7 +245,7 @@ body {
 }
 
 .side-menu svg:hover {
-  /* color: #fff; */
+  color: #fff;
 }
 
 .side-title {
@@ -303,72 +303,6 @@ body {
   color: #fff;
 }
 
-.user-settings {
-  display: flex;
-  align-items: center;
-  padding-left: 20px;
-  flex-shrink: 0;
-  margin-left: auto;
-}
-
-.user-settings svg {
-  width: 10px;
-  flex-shrink: 0;
-}
-
-@media screen and (max-width: 575px) {
-  .user-settings svg {
-    display: none;
-  }
-}
-
-.user-settings .notify {
-  position: relative;
-}
-
-.user-settings .notify svg {
-  width: 20px;
-  margin-left: 24px;
-  flex-shrink: 0;
-}
-
-.user-settings .notification {
-  width: 8px;
-  height: 8px;
-  border-radius: 50%;
-  background-color: #ec5252;
-  position: absolute;
-  right: 1px;
-  border: 1px solid var(--theme-bg);
-  top: -2px;
-}
-
-@media screen and (max-width: 575px) {
-  .user-settings .notification {
-    display: none;
-  }
-}
-
-.user-img {
-  width: 30px;
-  height: 30px;
-  flex-shrink: 0;
-  object-fit: cover;
-  border-radius: 50%;
-}
-
-.user-name {
-  color: #fff;
-  font-size: 14px;
-  margin: 0 6px 0 12px;
-}
-
-@media screen and (max-width: 575px) {
-  .user-name {
-    display: none;
-  }
-}
-
 .main-container {
   display: flex;
   flex-direction: column;
@@ -400,141 +334,7 @@ body {
   margin: 30px 0 20px;
 }
 
-.main-blogs {
-  display: flex;
-  align-items: center;
-}
-
-.main-blog__author {
-  display: flex;
-  align-items: center;
-  padding-bottom: 10px;
-}
-
-.main-blog__author.tips {
-  flex-direction: column-reverse;
-  align-items: flex-start;
-}
-
-.main-blog__title {
-  font-size: 25px;
-  max-width: 12ch;
-  font-weight: 600;
-  letter-spacing: 1px;
-  color: #fff;
-  margin-bottom: 30px;
-}
-
-.main-blog {
-  background-image: url('https://assets.codepen.io/3364143/skate-removebg-preview.png');
-  background-size: 80%;
-  background-position-x: 150px;
-  background-color: #31abbd;
-  display: flex;
-  flex-direction: column;
-  width: 65%;
-  padding: 30px;
-  border-radius: 20px;
-  align-self: stretch;
-  overflow: hidden;
-  position: relative;
-  transition: background 0.3s;
-  background-repeat: no-repeat;
-}
-
-.main-blog + .main-blog {
-  margin-left: 20px;
-  width: 35%;
-  background-image: url(https://c0.anyrgb.com/images/1020/945/venice-beach-2018-outdoors-sport-men-jumping-desert-sunset-extreme-sports-one-person-action.jpg);
-  background-color: unset;
-  background-position-x: 0;
-  background-size: 139%;
-  filter: saturate(1.4);
-}
-
-.main-blog + .main-blog .author-img {
-  border-color: rgb(255 255 255 / 75%);
-  margin-top: 14px;
-}
-
-.main-blog + .main-blog .author-img__wrapper svg {
-  border-color: #ffe6b2;
-  color: #e7bb7d;
-}
-
-.main-blog + .main-blog .author-detail {
-  margin-left: 0;
-}
-
-@media screen and (max-width: 905px) {
-  .main,
-  .main + .main-blog {
-    width: 50%;
-    padding: 30px;
-  }
-
-  .main {
-    background-size: cover;
-    background-position-x: center;
-    background-blend-mode: overlay;
-  }
-}
-
-.main__time {
-  background: rgba(21, 13, 13, 0.44);
-  color: #fff;
-  padding: 3px 8px;
-  font-size: 12px;
-  border-radius: 6px;
-  position: absolute;
-  right: 20px;
-  bottom: 20px;
-}
-
-.author-img {
-  width: 52px;
-  height: 52px;
-  border: 1px solid rgb(255 255 255 / 75%);
-  padding: 4px;
-  border-radius: 50%;
-  object-fit: cover;
-}
-
-.author-img__wrapper {
-  position: relative;
-  flex-shrink: 0;
-}
-
-.author-img__wrapper svg {
-  width: 16px;
-  padding: 2px;
-  background-color: #fff;
-  color: #0daabc;
-  border-radius: 50%;
-  border: 2px solid #0daabc;
-  position: absolute;
-  bottom: 5px;
-  right: 0;
-}
-
-.author-name {
-  font-size: 15px;
-  color: #fff;
-  font-weight: 500;
-  margin-bottom: 8px;
-}
-
-.author-info {
-  font-size: 13px;
-  font-weight: 400;
-  color: #fff;
-}
-
-.author-detail {
-  margin-left: 16px;
-}
-
-.seperate {
+.separate {
   width: 3px;
   height: 3px;
   display: inline-block;
@@ -544,7 +344,7 @@ body {
   margin: 0 6px;
 }
 
-.seperate.video-seperate {
+.separate.video-separate {
   background-color: var(--body-color);
 }
 
@@ -612,7 +412,7 @@ body {
   position: relative;
 }
 
-.video-by {
+.video-tag {
   transition: 0.3s;
   padding: 20px 20px 0px;
   gap: 8px;
@@ -621,11 +421,7 @@ body {
   align-items: center;
 }
 
-.video-by.offline:before {
-  background-color: #ff7551;
-}
-
-.video-time {
+.video-rating {
   position: absolute;
   background: rgba(21, 13, 13, 0.44);
   color: rgb(255 255 255 / 85%);
@@ -642,7 +438,7 @@ body {
   transform-origin: center;
 }
 
-.video:hover .video-time {
+.video:hover .video-rating {
   display: none;
 }
 
@@ -653,21 +449,8 @@ body {
   z-index: 10;
 }
 
-.video:hover .video-by {
+.video:hover .video-tag {
   opacity: 0;
-}
-
-.video-author {
-  position: absolute;
-  right: 10px;
-  transition: 0.4s;
-  bottom: -25px;
-}
-
-.video-author svg {
-  background-color: #0aa0f7;
-  color: #fff;
-  border-color: var(--video-bg);
 }
 
 video {
@@ -692,23 +475,11 @@ video {
     max-height: none;
     grid-template-columns: 1fr;
   }
-
-  .stream-area .video-js.vjs-fluid {
-    min-height: 250px;
-  }
-
-  .stream-area .msg__content {
-    max-width: 100%;
-  }
 }
 
 .video-stream {
   object-fit: cover;
   transition: 0.3s;
-}
-
-.video-stream:hover .video-js .vjs-big-play-button {
-  opacity: 1;
 }
 
 .video-p {
@@ -721,18 +492,11 @@ video {
   left: 0;
 }
 
-.video-p.author-img {
-  border: 0;
-}
-
 .video-p-wrapper {
   display: flex;
   align-items: center;
 }
 
-.video-p-wrapper.author-img {
-  border: 0;
-}
 .video-p-wrapper svg {
   width: 24px;
   padding: 4px;
@@ -741,10 +505,6 @@ video {
 @media screen and (max-width: 650px) {
   .video-p-wrapper {
     flex-direction: column;
-  }
-
-  .video-p-wrapper .button-wrapper {
-    margin: 20px auto 0;
   }
 
   .video-p-wrapper .video-p-detail {
@@ -786,168 +546,39 @@ video {
   align-items: center;
 }
 
-.video-p-name.offline:after {
-  background-color: #ff7551;
-}
-
-.video-content {
-  width: 100%;
-}
-
-.button-wrapper {
-  display: flex;
-  align-items: center;
-  margin-left: auto;
-}
-
-.like {
-  display: flex;
-  align-items: center;
-  background-color: var(--button-bg);
-  color: #fff;
-  border: 0;
-  font-family: var(--body-font);
-  border-radius: 8px;
-  padding: 10px 16px;
-  font-size: 14px;
-  cursor: pointer;
-}
-
-.like.red {
-  background-color: #ea5f5f;
-}
-.like svg {
-  width: 18px;
-  flex-shrink: 0;
-  margin-right: 10px;
-  padding: 0;
-}
-.like + .like {
-  margin-left: 16px;
-}
-
-.video-stats {
-  margin-left: 30px;
-}
-
 .video-detail {
   display: flex;
   margin-top: 30px;
   width: 100%;
 }
 
-.chat-header {
-  display: flex;
-  align-items: center;
-  padding: 20px 0;
-  font-size: 16px;
-  font-weight: 600;
-  color: #fff;
-  position: sticky;
-  top: 0;
-  background-color: #252836;
-  left: 0;
-  z-index: 1;
-  border-bottom: 1px solid var(--border-color);
-}
-
-.chat-header svg {
-  width: 15px;
-  margin-right: 6px;
-  flex-shrink: 0;
-}
-
-.chat-header span {
-  margin-left: auto;
-  color: var(--body-color);
-  font-size: 12px;
-  display: flex;
-  align-items: center;
-}
-
-.chat-stream {
+.content-stream {
   flex-grow: 1;
   overflow: auto;
 }
 
-.chat {
-  background-color: #252836;
-  border-radius: 20px;
-  padding: 0 20px;
-  max-height: 414px;
-  overflow: auto;
-  overflow-x: hidden;
-}
-
-.chat-footer {
-  display: flex;
-  align-items: center;
-  position: sticky;
-  bottom: 0;
-  left: 0;
-  width: calc(100% + 20px);
-  padding-bottom: 12px;
-  background-color: #252836;
-}
-
-.chat-footer input {
-  width: 100%;
-  border: 0;
-  background-color: #2d303e;
-  border-radius: 20px;
-  font-size: 12px;
-  color: #fff;
-  margin-left: -10px;
-  padding: 12px 40px;
-  font-weight: 500;
-  font-family: var(--body-font);
-  background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='24' height='24' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3cpath fill-rule='evenodd' clip-rule='evenodd' d='M2 12C2 6.48 6.47 2 12 2c5.52 0 10 4.48 10 10s-4.48 10-10 10C6.47 22 2 17.52 2 12zm5.52 1.2c-.66 0-1.2-.54-1.2-1.2 0-.66.54-1.2 1.2-1.2.66 0 1.19.54 1.19 1.2 0 .66-.53 1.2-1.19 1.2zM10.8 12c0 .66.54 1.2 1.2 1.2.66 0 1.19-.54 1.19-1.2a1.194 1.194 0 10-2.39 0zm4.48 0a1.195 1.195 0 102.39 0 1.194 1.194 0 10-2.39 0z' fill='%236c6e78'/%3e%3c/svg%3e");
-  background-repeat: no-repeat;
-  background-size: 24px;
-  background-position: 8px;
-}
-
-.chat-footer input::placeholder {
-  color: #6c6e78;
-}
-
-.chat-footer:before {
-  content: '';
-  position: absolute;
-  background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg viewBox='0 0 24 24' fill='white' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M21.435 2.582a1.933 1.933 0 00-1.93-.503L3.408 6.759a1.92 1.92 0 00-1.384 1.522c-.142.75.355 1.704 1.003 2.102l5.033 3.094a1.304 1.304 0 001.61-.194l5.763-5.799a.734.734 0 011.06 0c.29.292.29.765 0 1.067l-5.773 5.8c-.428.43-.508 1.1-.193 1.62l3.075 5.083c.36.604.98.946 1.66.946.08 0 .17 0 .251-.01.78-.1 1.4-.634 1.63-1.39l4.773-16.075c.21-.685.02-1.43-.48-1.943z'/%3e%3c/svg%3e");
-  background-repeat: no-repeat;
-  background-size: 14px;
-  background-position: center;
-  width: 18px;
-  height: 18px;
-  background-color: #6c5ecf;
-  padding: 4px;
-  border-radius: 50%;
-  right: 16px;
-}
-
-.chat-vid__title {
+.content-title {
   color: #fff;
   font-size: 18px;
 }
 
-.chat-vid__wrapper {
+.content-wrapper {
   display: flex;
   align-items: center;
   margin-top: 26px;
   text-decoration: none;
 }
 
-.chat-vid__wrapper.active {
+.content-wrapper.active {
   background-color: var(--border-color);
   border-radius: 10px;
 }
 
-.chat-vid__wrapper.lock {
+.content-wrapper.lock {
   cursor: not-allowed;
 }
 
-.chat-vid__name {
+.content-title {
   color: #fff;
   font-size: 14px;
   line-height: 1.3em;
@@ -957,7 +588,7 @@ video {
   -webkit-box-orient: vertical;
 }
 
-.chat-vid__img {
+.content-img {
   width: 100px;
   height: 80px;
   border-radius: 10px;
@@ -967,248 +598,35 @@ video {
   transition: 0.3s;
 }
 
-.chat-vid__img:hover {
+.content-img:hover {
   transform: scale(1.02);
 }
 
-.chat-vid__content {
+.content-content {
   max-width: 20ch;
   padding-right: 16px;
 }
 
-.chat-vid__by,
-.chat-vid__info {
+.content-status,
+.content-info {
   color: var(--body-color);
   font-size: 13px;
 }
 
-.chat-vid__by {
+.content-status {
   margin: 8px 0;
   gap: 4px;
   display: flex;
   align-items: center;
 }
 
-.chat-vid__button {
-  background-color: #6c5ecf;
-  border: 0;
-  color: #fff;
-  font-size: 13px;
-  margin-top: 26px;
-  display: flex;
-  padding: 0 10px;
-  align-items: center;
-  justify-content: center;
-  height: 40px;
-  border-radius: 10px;
-  cursor: pointer;
-  transition: 0.3s;
-}
-
-.chat-vid__button:hover {
-  background-color: #5847d0;
-}
-
-.message {
-  display: flex;
-  align-items: center;
-  margin-top: 18px;
-}
-
-.message:last-child {
-  margin-bottom: 18px;
-}
-
-.message-container .author-img__wrapper svg {
-  width: 15px;
-}
-
-.msg__name {
-  font-size: 13px;
-}
-
-.msg__content {
-  line-height: 1.4em;
-  max-width: 26ch;
-  display: -webkit-box;
-  overflow: hidden;
-  -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;
-}
-
-//player
-
-.video-js .vjs-control-bar {
-  display: flex;
-  align-items: center;
-}
-
-.vjs-poster {
-  background-size: 150%;
-}
-
-.video-js .vjs-control-bar {
-  width: 100%;
-  position: absolute;
-  bottom: 14px;
-  padding-left: 36px;
-  left: 14px;
-  width: calc(100% - 28px);
-  right: 0;
-  border-radius: 10px;
-  height: 4em;
-  background-color: #2b333f;
-  background-color: rgba(43, 51, 63, 0.7);
-}
-
-@media screen and (max-width: 625px) {
-  .video-js .vjs-control-bar {
-    padding-left: 0;
-  }
-}
-
-.video-js:hover .vjs-big-play-button {
-  background-color: rgba(43, 51, 63, 0.5);
-}
-
-.video-js .vjs-big-play-button {
-  transition: 0.3s;
-  opacity: 0;
-  border: 0;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.video-js .vjs-big-play-button:hover {
-  background-color: rgba(43, 51, 63, 0.7);
-  border-color: transparent;
-}
-
-.vjs-play-control:after {
-  content: 'LIVE';
-  position: absolute;
-  left: -66px;
-  top: 7px;
-  background-color: #8941e3;
-  height: 24px;
-  font-family: var(--body-font);
-  font-size: 10px;
-  padding: 0 12px 0 26px;
-  display: flex;
-  font-weight: 700;
-  letter-spacing: 0.03em;
-  align-items: center;
-  border-radius: 6px;
-  background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' fill='%23fff' stroke='%23fff' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' class='feather feather-circle'%3e%3ccircle cx='12' cy='12' r='10'/%3e%3c/svg%3e");
-  background-repeat: no-repeat;
-  background-size: 6px;
-  background-position: 12px;
-}
-
-@media screen and (max-width: 625px) {
-  .vjs-play-control:after {
-    display: none;
-  }
-}
-
-.vjs-menu-button-inline .vjs-menu {
-  top: 4px;
-}
-
-.video-js .vjs-control:before,
-.video-js .vjs-time-control {
-  line-height: 40px;
-}
-
-.video-js .vjs-tech {
-  object-fit: cover;
-}
-
-button.vjs-play-control.vjs-control.vjs-button {
-  margin-left: 40px;
-}
-
-@media screen and (max-width: 625px) {
-  button.vjs-play-control.vjs-control.vjs-button {
-    margin-left: 0;
-  }
-}
-
-.vjs-icon-fullscreen-enter:before,
-.video-js .vjs-fullscreen-control:before {
-  content: '';
-  position: absolute;
-  display: block;
-  background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='20' height='20' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3cpath fill-rule='evenodd' clip-rule='evenodd' d='M2.54 0h3.38c1.41 0 2.54 1.15 2.54 2.561V5.97c0 1.42-1.13 2.56-2.54 2.56H2.54C1.14 8.53 0 7.39 0 5.97V2.561C0 1.15 1.14 0 2.54 0zm0 11.47h3.38c1.41 0 2.54 1.14 2.54 2.56v3.41c0 1.41-1.13 2.56-2.54 2.56H2.54C1.14 20 0 18.85 0 17.44v-3.41c0-1.42 1.14-2.56 2.54-2.56zM17.46 0h-3.38c-1.41 0-2.54 1.15-2.54 2.561V5.97c0 1.42 1.13 2.56 2.54 2.56h3.38c1.4 0 2.54-1.14 2.54-2.56V2.561C20 1.15 18.86 0 17.46 0zm-3.38 11.47h3.38c1.4 0 2.54 1.14 2.54 2.56v3.41c0 1.41-1.14 2.56-2.54 2.56h-3.38c-1.41 0-2.54-1.15-2.54-2.56v-3.41c0-1.42 1.13-2.56 2.54-2.56z' fill='%23fff'/%3e%3c/svg%3e");
-  background-size: 11px;
-  background-position: center;
-  background-position-y: 14px;
-  background-repeat: no-repeat;
-  opacity: 0.6;
-}
-
-.vjs-playback-rate .vjs-playback-rate-value {
-  font-size: 1.1em;
-  line-height: 3.5em;
-  opacity: 0.6;
-  font-weight: 700;
-  font-family: var(--body-font);
-}
-
-.video-js .vjs-playback-rate {
-  width: 2.2em;
-}
-
-.video-js.vjs-fluid {
-  border-radius: 20px;
-  overflow: hidden;
-  min-height: 414px;
-}
-
 @media screen and (max-width: 735px) {
-  .main-blogs {
-    flex-wrap: wrap;
-  }
-
-  .main-blog,
-  .main-blog + .main-blog {
-    width: 100%;
-  }
-
   .videos {
     grid-template-columns: 1fr;
-  }
-
-  .main-blog + .main-blog {
-    margin-left: 0;
-    margin-top: 20px;
-    background-size: cover;
   }
 }
 
 @media screen and (max-width: 475px) {
-  .main-blog__title {
-    font-size: 20px;
-  }
-
-  .author-name {
-    font-size: 14px;
-  }
-
-  .main-blog__author {
-    flex-direction: column-reverse;
-    align-items: flex-start;
-  }
-
-  .author-detail {
-    margin-left: 0;
-  }
-
-  .main-blog .author-img {
-    margin-top: 14px;
-  }
-
   .main-container {
     padding: 0 20px 20px;
   }
@@ -1216,6 +634,7 @@ button.vjs-play-control.vjs-control.vjs-button {
   .header {
     padding: 20px;
   }
+
   .sidebar,
   .sidebar.collapse {
     width: 40px;
@@ -1449,22 +868,14 @@ button.vjs-play-control.vjs-control.vjs-button {
   justify-content: center;
   height: 40px;
   border-radius: 10px;
-  cursor: pointer;
   transition: 0.3s;
-}
-
-.error-btn:hover {
-  background-color: #5847d0;
-}
-
-.error-link {
-  cursor: pointer;
-  text-decoration: inherit;
-  position: relative;
-  display: inline-block;
-
   font-size: 0.875rem;
   line-height: 1.25rem;
   font-weight: 500;
   color: #fff;
+  text-decoration: none;
+}
+
+.error-btn:hover {
+  background-color: #5847d0;
 }
